--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,10 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
 .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
@@ -39,4 +33,47 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.container {
+  margin-top: 5px;
+  margin-left: 5px;
+  background-color: black;
+  border-radius: 7%;
+}
+
+.input {
+  color: white;
+  font-size: large;
+  height: 52px;
+  margin-right: 15px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: end;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+.key {
+  color: white;
+  text-align: center;
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  margin: 3px;
+  cursor: pointer;
+}
+
+.number {
+  background-color: #898A8D;
+}
+
+.operator {
+  background-color: #FF8F1C;
 }
